--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-picker/picker": "^2.1.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
@@ -20,7 +23,8 @@
     "react-native-web": "~0.13.12",
     "vue-native-core": "^0.3.1",
     "vue-native-helper": "^0.3.1",
-    "vue-native-router": "^0.2.1"
+    "vue-native-router": "^0.2.1",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
